# wgdb

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
go/: alloc.go  api.go  db.go  go.mod  go.sum  hooks.go  hooks_unix.go  hooks_windows.go  main.go  net_darwin.go  net_linux.go  net_other.go  net_windows.go  priv_unix.go  priv_windows.go  svc_stub.go  svc_windows.go  wg.go  wg_linux.go  wg_uapi_darwin.go  wg_uapi_other.go  wg_uapi_windows.go  wg_userspace.go  wgconf.go  wintun_386.go  wintun_amd64.go  wintun_arm64.go  wintun_stub.go  wintun_windows.go
rust/src/: net.rs
src/: alloc.rs  api.rs  db.rs  main.rs  net.rs  wg.rs
