[package]
name = "wgdb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
futures = "0.3.32"
hex = "0.4.3"
netlink-packet-route = "0.28"
rand = "0.10.0"
rtnetlink = "0.20.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["auth"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wireguard-control = "1.7.1"
clap = { version = "4.6.0", features = ["derive", "env"] }

[profile.release]
strip = true
lto = true
